Fix too large padding for images

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -214,6 +214,7 @@
     img {
       max-width: 100%;
       min-height: 1em;
+      height: auto;
     }
 
     figure {
